--- a/azka.html
+++ b/azka.html
@@ -1,72 +1,7 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Azka Shaikh — Creative Technologist</title>
-  <meta name="description" content="Personal landing page for Azka Shaikh — developer, designer, and creative technologist. Portfolio, services, contact and resume.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; background: #0f1724; color: #e6eef8; }
-    a { color: #7c3aed; text-decoration: none; }
-    header, footer { padding: 20px; background: #0b1220; }
-    header h1 { margin: 0; font-size: 24px; }
-    main { padding: 20px; }
-    .section { margin-bottom: 40px; }
-    .skills span { display: inline-block; background: rgba(255,255,255,0.1); padding: 5px 10px; border-radius: 5px; margin: 5px 5px 0 0; }
-    form { display: grid; gap: 10px; max-width: 400px; }
-    input, textarea { padding: 10px; border-radius: 5px; border: none; }
-    button { padding: 10px; border: none; border-radius: 5px; background: #7c3aed; color: white; font-weight: bold; cursor: pointer; }
-  </style>
-</head>
+<head> <title> This is my profile </title></head>
 <body>
-  <header>
-    <h1>Azka Shaikh</h1>
-    <p>Creative Technologist • Web Developer • Designer</p>
-  </header>
-
-  <main>
-    <section class="section" id="about">
-      <h2>About</h2>
-      <p>I’m a full-stack web developer and product designer who loves turning ideas into beautiful, usable products.</p>
-      <div class="skills">
-        <span>React</span><span>Next.js</span><span>Node.js</span><span>TypeScript</span><span>Tailwind CSS</span><span>Figma</span>
-      </div>
-    </section>
-
-    <section class="section" id="portfolio">
-      <h2>Portfolio</h2>
-      <p>Some selected projects showcasing my skills.</p>
-    </section>
-
-    <section class="section" id="services">
-      <h2>Services</h2>
-      <ul>
-        <li>Web Development</li>
-        <li>Product Design</li>
-        <li>Consulting & Mentoring</li>
-      </ul>
-    </section>
-
-    <section class="section" id="contact">
-      <h2>Contact</h2>
-      <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>© <span id="year"></span> Azka Shaikh — All rights reserved.</p>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  
 </body>
+
 </html>
