--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <div class="stat">
             <div style="font-weight:700">Phone</div>
-            <div style="color:var(--muted)">+91 9XX-XXX-XXXX</div>
+            <div style="color:var(--muted)">+91 7208912355</div>
           </div>
 
           <div class="card" style="display:flex;gap:8px;justify-content:space-around">
@@ -294,3 +294,4 @@
   </script>
 </body>
 </html>
+
