--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
             <h4>Web Development</h4>
             <p style="color:var(--muted);font-size:13px">Full-stack web apps, APIs, static sites, and JAMstack architecture.</p>
           </div>
+            <div class="card">
+            <h4>Web Development</h4>
+            <p style="color:var(--muted);font-size:13px">Full-stack web apps, APIs, static sites, and JAMstack architecture.</p>
+          </div>
           <div class="card">
             <h4>Product Design</h4>
             <p style="color:var(--muted);font-size:13px">UX research, wireframes, high-fidelity prototypes, and component libraries.</p>
@@ -294,4 +298,5 @@
   </script>
 </body>
 </html>
+
 
