--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h2 style="margin-bottom:8px">Services</h2>
         <div class="grid-3">
           <div class="card">
-            <h4>Web Development</h4>
+            <h4>Cloud Computing</h4>
             <p style="color:var(--muted);font-size:13px">Full-stack web apps, APIs, static sites, and JAMstack architecture.</p>
           </div>
             <div class="card">
@@ -298,5 +298,6 @@
   </script>
 </body>
 </html>
+
 
 
