--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
           <div class="stat">
             <div style="font-weight:700">Email</div>
-            <div style="color:var(--muted)"><a href="mailto:azka@example.com">azka@example.com</a></div>
+            <div style="color:var(--muted)"><a href="mailto:azka@example.com">shkazka112@gmail.com</a></div>
           </div>
           <div class="stat">
             <div style="font-weight:700">Phone</div>
@@ -298,6 +298,7 @@
   </script>
 </body>
 </html>
+
 
 
 
