--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <p style="color:var(--muted);font-size:13px">Full-stack web apps, APIs, static sites, and JAMstack architecture.</p>
           </div>
           <div class="card">
-            <h4>Product Design</h4>
+            <h4>Cloud Computing</h4>
             <p style="color:var(--muted);font-size:13px">UX research, wireframes, high-fidelity prototypes, and component libraries.</p>
           </div>
           <div class="card">
@@ -298,6 +298,7 @@
   </script>
 </body>
 </html>
+
 
 
 
