--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <aside class="profile">
           <div class="card" style="text-align:center">
-            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Azka Shaikh" style="width:100%;border-radius:10px;object-fit:cover;max-height:180px;display:block;margin-bottom:12px">
+            <img src="azkapic.jpg" alt="Azka Shaikh" style="width:100%;border-radius:10px;object-fit:cover;max-height:180px;display:block;margin-bottom:12px">
             <div style="font-weight:700">Azka Shaikh</div>
             <div style="color:var(--muted);font-size:13px;margin-top:6px">Creative Technologist & Full‑Stack Developer</div>
             <a class="download" href="#" download="Azka_Shaikh_Resume.pdf" style="margin-top:12px;display:inline-block">Download Resume (PDF)</a>
@@ -298,6 +298,7 @@
   </script>
 </body>
 </html>
+
 
 
 
