--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="stat">
             <div style="font-weight:700">Location</div>
-            <div style="color:var(--muted)">India</div>
+            <div style="color:var(--muted)">Mumbai</div>
           </div>
           <div class="stat">
             <div style="font-weight:700">Email</div>
@@ -298,6 +298,7 @@
   </script>
 </body>
 </html>
+
 
 
 
